--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -46,9 +46,9 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 140
+          "height": 105
         },
-        "outputId": "da6bba7f-f4ad-4cb2-a564-f537f195287e"
+        "outputId": "f19450d9-f792-4e20-9417-4079b9cae51e"
       },
       "cell_type": "code",
       "source": [
@@ -56,15 +56,15 @@
         "upload = files.upload()\n",
         "upload = files.upload()"
       ],
-      "execution_count": 35,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-1543efc9-f48e-4846-8df1-34082509b39c\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-1543efc9-f48e-4846-8df1-34082509b39c\">\n",
+              "     <input type=\"file\" id=\"files-2de37a57-dc5f-4f20-96ce-8ef53d47d078\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-2de37a57-dc5f-4f20-96ce-8ef53d47d078\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -81,7 +81,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving sudoku1.PNG to sudoku1.PNG\n"
+            "Saving sudokuD.png to sudokuD.png\n"
           ],
           "name": "stdout"
         },
@@ -90,8 +90,8 @@
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-6a129fc2-5ecd-4a2d-a9bf-8f7762edea43\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-6a129fc2-5ecd-4a2d-a9bf-8f7762edea43\">\n",
+              "     <input type=\"file\" id=\"files-6cfbe809-d8a1-405f-b52e-a7c61feef4ba\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-6cfbe809-d8a1-405f-b52e-a7c61feef4ba\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -104,13 +104,6 @@
           "metadata": {
             "tags": []
           }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Saving sudoku2.PNG to sudoku2.PNG\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
@@ -120,7 +113,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 341
+          "height": 361
         },
         "outputId": "c5788733-c163-4d94-aca7-5cf272600db9"
       },
@@ -529,9 +522,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 503
+          "height": 539
         },
-        "outputId": "2992f155-2494-4da8-bc2f-37c1d211b13d"
+        "outputId": "7b3f0b73-3844-4ebc-f8b7-6819855a0d0f"
       },
       "cell_type": "code",
       "source": [
@@ -539,6 +532,9 @@
         "\n",
         "def predict_image(area, contours, recogsize):\n",
         "  #img = cv2.imread(name)\n",
+        "  h, w, _ = img.shape\n",
+        "  print('width: ', w)\n",
+        "  print('height:', h)\n",
         "  gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
         "  gray = cv2.GaussianBlur(gray, (3, 3), 0)\n",
         "  im2 = cv2.threshold(gray, 140, 225, cv2.THRESH_BINARY_INV)[1]\n",
@@ -716,7 +712,7 @@
         "\n",
         "    \n",
         "#調整するパラメーター一覧\n",
-        "name = \"sudoku2.PNG\" #画像の名前\n",
+        "name = \"sudoku.png\" #画像の名前\n",
         "area = 20 #枠抽出から外を引くパラメーター\n",
         "contours = 12 #一つ一つの数字画像の周りをくりぬくパラメーター\n",
         "recogsize = 30 #数字か空白か判定する際の枠(50*50の画像で中心からの大きさ)\n",
@@ -732,11 +728,13 @@
         "\n",
         "print(\"sucess!\")"
       ],
-      "execution_count": 34,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "width:  1236\n",
+            "height: 1242\n",
             "This is the problem!\n",
             "..3|2..|8..\n",
             ".2.|.19|..7\n",
@@ -767,6 +765,306 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "owT6YMJeCo17",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1097
+        },
+        "outputId": "015c5486-c1fc-4489-a773-b06386969790"
+      },
+      "cell_type": "code",
+      "source": [
+        "#どんな画像でもエラーが出ないようにする関数を開発中\n",
+        "\n",
+        "def predict_image(contours, recogsize):\n",
+        "  #img = cv2.imread(name)\n",
+        "  h, w, _ = img.shape\n",
+        "  print('width: ', round(w, -2))\n",
+        "  print(\"height: \", round(h, -2))\n",
+        "  area = round(0.02 * round(min(h, w), -2) - 3) #ここのパラメーター超重要\n",
+        "  width = round(0.03 * round(min(h, w), -2) - 6) #ここのパラメーター超重要\n",
+        "  if area > 20: area = 20\n",
+        "  if width > 30: width = 30\n",
+        "  print(\"area: \", area)\n",
+        "  print(\"width: \", width)\n",
+        "  \n",
+        "  gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+        "  gray = cv2.GaussianBlur(gray, (3, 3), 0)\n",
+        "  im2 = cv2.threshold(gray, 140, 225, cv2.THRESH_BINARY_INV)[1]\n",
+        "\n",
+        "  cnts = cv2.findContours(im2, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[1]\n",
+        "\n",
+        "  dot = [0, 0, 0, 0, 0]\n",
+        "\n",
+        "  for pt in cnts:\n",
+        "    X, Y, W, H = cv2.boundingRect(pt)\n",
+        "    cv2.rectangle(img, (X, Y), (X+W, Y+H), (0, 255, 0), width)\n",
+        "    sqware = (W)*(H)\n",
+        "    if sqware > dot[0]:\n",
+        "      dot.clear()\n",
+        "      dot.extend([sqware, X, Y, W, H]) \n",
+        "  print(dot[3], dot[4])    \n",
+        "  values = resize_image(area, contours, recogsize, dot)\n",
+        "  return (values)\n",
+        "\n",
+        "\n",
+        "def resize_image(area, contours, recogsize, dot):\n",
+        "  imgC = img[dot[2]+area:dot[2]+dot[4]-area, dot[1]+area:dot[1]+dot[3]-area]\n",
+        "  imgDATA = cv2.resize(imgC, (900, 900))\n",
+        "  values = optical_recognition(area, contours, recogsize, dot, imgDATA)\n",
+        "  return (values)\n",
+        "\n",
+        "def optical_recognition(area, contours, recogsize, dot, imgDATA):\n",
+        "  sudokudata = []\n",
+        "\n",
+        "  for y in range(9):\n",
+        "    for x in range(9):\n",
+        "      coordinate = (str(y + 1) + str(x + 1))\n",
+        "\n",
+        "      contoursY1 = y * 100\n",
+        "      contoursY2 = contoursY1 + 100\n",
+        "      contoursX1 = x * 100\n",
+        "      contoursX2 = contoursX1 + 100\n",
+        "\n",
+        "      filename = \"img\" + coordinate\n",
+        "\n",
+        "\n",
+        "      image = imgDATA[contoursY1 + 5 + contours:contoursY2 + 5 - contours,\n",
+        "                      contoursX1 + 2 + contours:contoursX2 + 2 - contours]\n",
+        "\n",
+        "\n",
+        "      #二値化\n",
+        "      image = cv2.threshold(image,180,255,cv2.THRESH_BINARY)[1]\n",
+        "\n",
+        "      #判定に入る\n",
+        "      sizeX = (50-int(recogsize))/2\n",
+        "      sizeY = sizeX + int(recogsize)\n",
+        "      checkimg = image[int(sizeX):int(sizeY), int(sizeX):int(sizeY)]\n",
+        "      checkimg = checkimg.flatten()\n",
+        "      if 0 not in checkimg:\n",
+        "        sudokudata.append(0)\n",
+        "      else:\n",
+        "        #print(\"number\")\n",
+        "        #まだ完成形ではないため、数字をpngで出力して余白を追加させる\n",
+        "        cv2.imwrite(\"{}.png\".format(filename), image)\n",
+        "\n",
+        "        newimg = Image.open(\"{}.png\".format(filename))\n",
+        "        imgwhite = Image.open('white50.png')\n",
+        "        imgwhite.paste(newimg, (25, 25))\n",
+        "        imgwhite.save(\"{}a.png\".format(filename), quality=95)\n",
+        "\n",
+        "        txt = tool.image_to_string(\n",
+        "            Image.open(\"{}a.png\".format(filename)),\n",
+        "            lang=\"eng\",\n",
+        "            builder=pyocr.builders.TextBuilder(tesseract_layout=6))\n",
+        "\n",
+        "        print(\"{}:{}\".format(filename, txt))\n",
+        "        sudokudata.append(int(txt))\n",
+        "        \n",
+        "  values = encode(str(sudokudata))\n",
+        "  return (values)\n",
+        "        \n",
+        "#Pythonで数独\n",
+        "\n",
+        "def encode(grid):\n",
+        "    \"テキストから２次元配列のvaluesを作成する\"\n",
+        "    values = []\n",
+        "    digits = \"123456789\"\n",
+        "    chars = [c for c in grid if c in digits or c in '0.']\n",
+        "    assert len(chars) == 81\n",
+        "    grid_int = map(lambda x: int(x) if x != \".\" else 0, chars)\n",
+        "\n",
+        "    count = 0\n",
+        "    row = []\n",
+        "    for i in grid_int:\n",
+        "        row.append(i)\n",
+        "        count += 1\n",
+        "        if count % 9 == 0: #行毎に分割\n",
+        "            values.append(row)\n",
+        "            row = []\n",
+        "    return values\n",
+        "\n",
+        "def main(data):\n",
+        "  if solve(0, 0, data):\n",
+        "    #printtable(data)\n",
+        "    return data\n",
+        "  else:\n",
+        "    print (\"This problem is unsolvable\")\n",
+        "\n",
+        "def solve(x, y, table):\n",
+        "  if x == 0 and y == 9:\n",
+        "    return True\n",
+        "\n",
+        "  if table[y][x] == 0:\n",
+        "    for t in range(1, 10):\n",
+        "      table[y][x] = t\n",
+        "      if check(x, y, table):\n",
+        "        (nx, ny) = next(x, y)\n",
+        "        if solve(nx, ny, table):\n",
+        "          return True\n",
+        "    table[y][x] = 0\n",
+        "    return False\n",
+        "  else:\n",
+        "    (nx, ny) = next(x, y)\n",
+        "    if solve(nx, ny, table):\n",
+        "      return True\n",
+        "\n",
+        "def next(x, y):\n",
+        "  x += 1\n",
+        "  if x > 8:\n",
+        "    x = 0\n",
+        "    y += 1\n",
+        "  return (x, y)\n",
+        "\n",
+        "def check(x, y, table):\n",
+        "  return row(x, y, table) and column(x, y, table) and block(x, y, table)\n",
+        "\n",
+        "def column(x, y, table):\n",
+        "  for yt in range(9):\n",
+        "    if yt != y:\n",
+        "      if table[y][x] == table[yt][x]:\n",
+        "        return False\n",
+        "  return True\n",
+        "\n",
+        "def row(x, y, table):\n",
+        "  for xt in range(9):\n",
+        "    if xt != x:\n",
+        "      if table[y][x] == table[y][xt]:\n",
+        "        return False\n",
+        "  return True\n",
+        "\n",
+        "def block(x, y, table):\n",
+        "  xbase = (x // 3) * 3\n",
+        "  ybase = (y // 3) * 3\n",
+        "  for yt in range(ybase, ybase + 3):\n",
+        "    for xt in range(xbase, xbase + 3):\n",
+        "      if xt != x and yt != y:\n",
+        "        if table[y][x] == table[yt][xt]:\n",
+        "          return False\n",
+        "  return True\n",
+        "\n",
+        "def printtable(table):\n",
+        "  for y in range(9):\n",
+        "    for x in range(9):\n",
+        "      print (table[y][x])\n",
+        "    print (\"\")\n",
+        "\n",
+        "def output(data):\n",
+        "    for i in range(9):\n",
+        "        for j in range (9):\n",
+        "            if data[i][j] == 0:\n",
+        "                print (\".\", end=\"\")\n",
+        "            else:\n",
+        "                print (data[i][j], end=\"\")\n",
+        "\n",
+        "            if (j+1) % 3 == 0 and j < 8:\n",
+        "                print (\"|\", end=\"\")\n",
+        "        print(\"\")\n",
+        "        if (i+1) % 3 == 0 and i < 8:\n",
+        "            print (\"-------------------\")\n",
+        "    print(\"\")\n",
+        "\n",
+        "    \n",
+        "#調整するパラメーター一覧\n",
+        "name = \"sudoku.png\" #画像の名前\n",
+        "#area = 20 #枠抽出から外を引くパラメーター(手動でやっていたが自動化)\n",
+        "contours = 12 #一つ一つの数字画像の周りをくりぬくパラメーター\n",
+        "recogsize = 30 #数字か空白か判定する際の枠(50*50の画像で中心からの大きさ)\n",
+        "\n",
+        "\n",
+        "img = cv2.imread(name)\n",
+        "values = predict_image(contours, recogsize)\n",
+        "print(\"This is the problem!\")\n",
+        "output(values)\n",
+        "main(values)\n",
+        "print(\"This is the answer!\")\n",
+        "output(values)\n",
+        "\n",
+        "print(\"sucess!\")"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "width:  1200\n",
+            "height:  1200\n",
+            "area:  20\n",
+            "width:  30\n",
+            "1215 1216\n",
+            "img13:3\n",
+            "img14:2\n",
+            "img17:8\n",
+            "img22:2\n",
+            "img25:1\n",
+            "img26:9\n",
+            "img29:7\n",
+            "img31:9\n",
+            "img38:2\n",
+            "img43:5\n",
+            "img44:1\n",
+            "img47:6\n",
+            "img52:9\n",
+            "img55:6\n",
+            "img56:5\n",
+            "img59:3\n",
+            "img63:7\n",
+            "img64:9\n",
+            "img67:4\n",
+            "img73:8\n",
+            "img74:5\n",
+            "img77:9\n",
+            "img81:5\n",
+            "img88:6\n",
+            "img92:7\n",
+            "img95:9\n",
+            "img96:3\n",
+            "img99:1\n",
+            "This is the problem!\n",
+            "..3|2..|8..\n",
+            ".2.|.19|..7\n",
+            "9..|...|.2.\n",
+            "-------------------\n",
+            "..5|1..|6..\n",
+            ".9.|.65|..3\n",
+            "..7|9..|4..\n",
+            "-------------------\n",
+            "..8|5..|9..\n",
+            "5..|...|.6.\n",
+            ".7.|.93|..1\n",
+            "\n",
+            "This is the answer!\n",
+            "713|254|896\n",
+            "824|619|357\n",
+            "956|387|124\n",
+            "-------------------\n",
+            "385|142|679\n",
+            "491|765|283\n",
+            "267|938|415\n",
+            "-------------------\n",
+            "148|576|932\n",
+            "539|421|768\n",
+            "672|893|541\n",
+            "\n",
+            "sucess!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "0Mp9v04_VCFP",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "一応OK"
       ]
     }
   ]
